--- a/doc/partials/api/dotjem.routing.directive.jemView.html
+++ b/doc/partials/api/dotjem.routing.directive.jemView.html
@@ -3,10 +3,24 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"></div>
+<div class="description"><h1 id="overview">Overview</h3>
+
+<p><code>jemView</code> is a directive that complements the <a href="#/api/dotjem.routing.$state">$state</a> service by
+including the rendered template of the current state into the main layout (<code>index.html</code>) file.
+Every time the current route changes, the included view changes with it according to the
+configuration of the <code>$state</code> service.</p>
+
+<h1 id="animations">animations</h3>
+
+<ul>
+<li>enter - animation is used to bring new content into the browser.</li>
+<li>leave - animation is used to animate existing content away.</li>
+</ul>
+
+<p>The enter and leave animation occur concurrently.</p></div>
 <h2 id="Usage">Usage</h2>
 <div class="usage">as element:<pre class="prettyprint linenums">&lt;jem-view
-       jemView="{string}"&gt;
+       name="{string}"&gt;
 &lt;/jem-view&gt;</pre>
 as attribute<pre class="prettyprint linenums">&lt;ANY jem-view="{string}"&gt;
    ...
@@ -14,15 +28,40 @@ as attribute<pre class="prettyprint linenums">&lt;ANY jem-view="{string}"&gt;
 as class<pre class="prettyprint linenums">&lt;ANY class="jem-view: {string};"&gt;
    ...
 &lt;/ANY&gt;</pre>
-<h3 id="Directive.info">Directive info</h3>
-<div class="directive-info"><ul><li>This directive creates new scope.</li>
-</ul>
-</div>
 <h3 id="Parameters">Parameters</h3>
-<ul class="parameters"><li><code ng:non-bindable="">jemView – {string} – </code>
+<ul class="parameters"><li><code ng:non-bindable="">jemView|name – {string} – </code>
 <p>Name of the view</p></li>
 </ul>
 </div>
-<h2 id="Example">Example</h2>
-<div class="example"><p><example module="ngViewExample" deps="angular-route.js" animations="true"></p></div>
+<div class="member event"><h2 id="Events">Events</h2>
+<ul class="events"><li><h3 id="$refresh">$refresh</h3>
+<div class="$refresh"><p>This event is broadcasted on the view scope unless the view scope defines a refresh function.
+<br/>
+Refresh happens for sticky views when the sticky flag remains the same during an update.</p><div class="inline"><h4 id="Type.">Type:</h4>
+<div class="type-">broadcast</div>
+</div>
+<div class="inline"><h4 id="Target.">Target:</h4>
+<div class="target-">the current jemView scope</div>
+</div>
+<h4 id="Parameters">Parameters</h4>
+<ul class="parameters"><li><code ng:non-bindable="">angularEvent – {Object} – </code>
+<p>Synthetic event object.</p></li>
+<li><code ng:non-bindable="">name – {string} – </code>
+<p>The name of the view where the broadcast originated.</p></li>
+<li><code ng:non-bindable="">name – {Object} – </code>
+<p>Any data that may have been provided for a refresh.</p></li>
+</ul>
+</div>
+</li>
+<li><h3 id="$viewContentLoaded">$viewContentLoaded</h3>
+<div class="$viewcontentloaded"><p>Emitted every time the jemView content is reloaded.</p><div class="inline"><h4 id="Type.">Type:</h4>
+<div class="type-">emit</div>
+</div>
+<div class="inline"><h4 id="Target.">Target:</h4>
+<div class="target-">the current jemView scope</div>
+</div>
+</div>
+</li>
+</ul>
+</div>
 </div>
