--- a/doc/partials/api/dotjem.routing.$view.html
+++ b/doc/partials/api/dotjem.routing.$view.html
@@ -167,7 +167,22 @@ Views can also be refreshed by calling the <code>refresh</code> method.</p><h4 i
 </ul>
 </div>
 <div class="member event"><h2 id="Events">Events</h2>
-<ul class="events"><li><h3 id="$viewRefresh">$viewRefresh</h3>
+<ul class="events"><li><h3 id="$viewPrep">$viewPrep</h3>
+<div class="$viewprep"><p>Broadcasted when a view refreshed, if a transaction is active this will not occur before that is commited.</p><div class="inline"><h4 id="Type.">Type:</h4>
+<div class="type-">broadcast</div>
+</div>
+<div class="inline"><h4 id="Target.">Target:</h4>
+<div class="target-">root scope</div>
+</div>
+<h4 id="Parameters">Parameters</h4>
+<ul class="parameters"><li><code ng:non-bindable="">angularEvent – {Object} – </code>
+<p>Synthetic event object.</p></li>
+<li><code ng:non-bindable="">name – {State} – </code>
+<p>Name of the view that was refreshed.</p></li>
+</ul>
+</div>
+</li>
+<li><h3 id="$viewRefresh">$viewRefresh</h3>
 <div class="$viewrefresh"><p>Broadcasted when a view refreshed, if a transaction is active this will not occur before that is commited.</p><div class="inline"><h4 id="Type.">Type:</h4>
 <div class="type-">broadcast</div>
 </div>
